Efficiently implement scattering/gathering IO for redis store